# adventofcode

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
01/: advent.rap  input_list.txt
cpp/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
cpp/2015/solutions/1/: main.cpp
cpp/cmake/: CPM.cmake
cpp/src/: butler.cpp
cpp/src/2015/1/: main.cpp
cpp/src/2021/1/: main.cpp
cpp/src/2021/10/: main.cpp
cpp/src/2021/11/: main.cpp
cpp/src/2021/12/: main.cpp
cpp/src/2021/16/: main.cpp
cpp/src/2021/18/: main.cpp
cpp/src/2021/2/: main.cpp
cpp/src/2021/3/: main.cpp
cpp/src/2021/4/: main.cpp
cpp/src/2021/5/: main.cpp
cpp/src/2021/6/: main.cpp
cpp/src/2021/7/: main.cpp
cpp/src/2021/8/: main.cpp
cpp/src/2021/9/: main.cpp
cpp/src/2021/aoc/: aoc.cpp  aoc.hpp  tdm.cpp  tdm.hpp
ruby/01/: solution.rb
ruby/02/: solution.rb
ruby/03/: solution.rb
ruby/04/: solution.rb
ruby/05/: solution.rb
ruby/06/: example1.txt  solution.rb
ruby/07/: solution.rb
ruby/08/: solution.rb
ruby/10/: solution.rb
rust/: Cargo.toml  LICENSE  README.md  shell.nix
rust/src/: lib.rs
rust/src/2015/03/: main.rs
rust/src/2015/04/: main.rs
rust/src/2015/06/: main.rs
rust/src/2015/07/: main.rs
rust/src/2015/08/: main.rs
rust/src/2015/09/: ugraph.rs
rust/src/2020/02/: main.rs
rust/src/2020/04/: main.rs
rust/src/2020/06/: main.rs
rust/src/2020/12/: main.rs
rust/src/2020/13/: main.rs
rust/src/2020/14/: main.rs
rust/src/2020/15/: main.rs
rust/src/2020/16/: main.rs
rust/src/2020/18/: main.rs
rust/src/2020/21/: main.rs
rust/src/2020/22/: main.rs
rust/src/2020/23/: main.rs
rust/src/2020/24/: main.rs
scraper/: languages.txt  scrape_languages.py
src/2015/01/: main.rs
src/2015/02/: main.rs
src/2015/05/: main.rs
src/2015/06/: main.rs
src/2015/07/: main.rs
src/2015/08/: main.rs
src/2015/09/: main.rs  ugraph.rs
src/2015/10/: main.rs
src/2015/11/: main.rs
src/2020/01/: main.rs
src/2020/03/: main.rs
src/2020/05/: main.rs
src/2020/07/: main.rs
src/2020/08/: main.rs
src/2020/09/: main.rs
src/2020/10/: main.rs
src/2020/11/: main.rs
src/2020/13/: main.rs
src/2020/14/: main.rs
src/2020/15/: main.rs
src/2020/17/: main.rs
src/2020/19/: main.rs
src/2020/20/: main.rs
src/2020/25/: main.rs
uiua/2022/: 1.ua
zig/: .gitignore  build.zig  build.zig.zon  flake.nix  shell.nix  zig-overlay.nix
zig/archive/: aoc.zig  permute_v2.zig  ug.zig
zig/archive/2015/: 3.zig  7.zig  8.zig  9.zig
zig/archive/2022/: 13.zig
zig/archive/2023/: 1.zig  10.zig  14.zig  15.zig  3.zig  4.zig  8.zig
zig/archive/2024/01/: main.zig
zig/archive/2024/04/: main.zig
zig/archive/2024/06/: main.zig
zig/archive/2024/22/: main.zig
zig/src/: aoc.zig  lib.zig  permute.zig  permute_v2.zig  template.zig  ug.zig  utils.zig
zig/src/2015/: 1.zig  10.zig  11.zig  12.zig  2.zig  3.zig  4.zig  5.zig  6.zig  7.zig  8.zig  9.zig
zig/src/2015/01/: main.zig
zig/src/2015/1/: main.zig
zig/src/2021/1/: main.zig
zig/src/2022/: 1.zig  13.zig  2.zig  21.zig  3.zig  4.zig  9.zig
zig/src/2023/: 1.zig  14.zig  16.zig  2.zig  5.zig  6.zig  7.zig  8.zig  9.zig
zig/src/2024/01/: main.zig
zig/src/2024/02/: main.zig
zig/src/2024/03/: main.zig
zig/src/2024/05/: main.zig
zig/src/2024/06/: main.zig
zig/src/2024/22/: main.zig
zig/src/disabled_2015/: 10.zig
zig/src/disabled_2022/: 10.zig  6.zig
zig/src/old/2015/: 1.zig  12.zig
zig/src/old/2022/: 5.zig
