[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Andriy Mykhaylyk <erp.lsf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
itertools = "0.9.0"

[[bin]]
name = "2015-01"
path = "src/2015/01/main.rs"

[[bin]]
name = "2015-02"
path = "src/2015/02/main.rs"

[[bin]]
name = "2015-03"
path = "src/2015/03/main.rs"

[[bin]]
name = "2015-04"
path = "src/2015/04/main.rs"

[[bin]]
name = "2015-05"
path = "src/2015/05/main.rs"

[[bin]]
name = "2015-06"
path = "src/2015/06/main.rs"

[[bin]]
name = "2015-07"
path = "src/2015/07/main.rs"

[[bin]]
name = "2015-08"
path = "src/2015/08/main.rs"

[[bin]]
name = "2015-09"
path = "src/2015/09/main.rs"

[[bin]]
name = "2015-10"
path = "src/2015/10/main.rs"

[[bin]]
name = "2015-11"
path = "src/2015/11/main.rs"

[[bin]]
name = "2020-01"
path = "src/2020/01/main.rs"

[[bin]]
name = "2020-02"
path = "src/2020/02/main.rs"

[[bin]]
name = "2020-03"
path = "src/2020/03/main.rs"

[[bin]]
name = "2020-04"
path = "src/2020/04/main.rs"

[[bin]]
name = "2020-05"
path = "src/2020/05/main.rs"

[[bin]]
name = "2020-06"
path = "src/2020/06/main.rs"