[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Andriy Mykhaylyk <erp.lsf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
itertools = "0.9.0"
petgraph = "0.5.1"
linked_hash_set = "0.1.4"

[[bin]]
name = "2015-01"
path = "src/2015/01/main.rs"

[[bin]]
name = "2015-02"
path = "src/2015/02/main.rs"

[[bin]]
name = "2015-03"
path = "src/2015/03/main.rs"

[[bin]]
name = "2015-04"
path = "src/2015/04/main.rs"

[[bin]]
name = "2015-05"
path = "src/2015/05/main.rs"

[[bin]]
name = "2015-06"
path = "src/2015/06/main.rs"

[[bin]]
name = "2015-07"
path = "src/2015/07/main.rs"

[[bin]]
name = "2015-08"
path = "src/2015/08/main.rs"

[[bin]]
name = "2015-09"
path = "src/2015/09/main.rs"

[[bin]]
name = "2015-10"
path = "src/2015/10/main.rs"

[[bin]]
name = "2015-11"
path = "src/2015/11/main.rs"

[[bin]]
name = "2020-01"
path = "src/2020/01/main.rs"

[[bin]]
name = "2020-02"
path = "src/2020/02/main.rs"

[[bin]]
name = "2020-03"
path = "src/2020/03/main.rs"

[[bin]]
name = "2020-04"
path = "src/2020/04/main.rs"

[[bin]]
name = "2020-05"
path = "src/2020/05/main.rs"

[[bin]]
name = "2020-06"
path = "src/2020/06/main.rs"

[[bin]]
name = "2020-07"
path = "src/2020/07/main.rs"

[[bin]]
name = "2020-08"
path = "src/2020/08/main.rs"

[[bin]]
name = "2020-09"
path = "src/2020/09/main.rs"

[[bin]]
name = "2020-10"
path = "src/2020/10/main.rs"

[[bin]]
name = "2020-11"
path = "src/2020/11/main.rs"

[[bin]]
name = "2020-12"
path = "src/2020/12/main.rs"

[[bin]]
name = "2020-13"
path = "src/2020/13/main.rs"

[[bin]]
name = "2020-14"
path = "src/2020/14/main.rs"

[[bin]]
name = "2020-15"
path = "src/2020/15/main.rs"

[[bin]]
name = "2020-16"
path = "src/2020/16/main.rs"